# cpp-game

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: Camera.cpp  Camera.h  Constants.h  FixtureData.h  Game.cpp  Game.h  Map.cpp  Map.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  TextureManager.cpp  TextureManager.h  main.cpp
src/engine/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Debug.cpp  Debug.h  FixtureData.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h
src/entities/: Decor.cpp  Decor.h  Enemy.cpp  Enemy.h  Heart.cpp  Heart.h  Object.h  Player.cpp  Player.h
src/entities/decor/: Grass.cpp  Grass.h  SmallTree.cpp  SmallTree.h  Tree.cpp  Tree.h
src/scenes/: DeathMenu.cpp  DeathMenu.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h
